fix(navbar): change drawer z-index

--- a/public/css/components/drawer.css
+++ b/public/css/components/drawer.css
@@ -18,6 +18,7 @@
 	display: none;
 	animation-name: slideIn;
 	animation-duration: 0.5s;
+	z-index: 2;
 }
 
 .drawer-body {
